# UUID7

./: CMakeLists.txt  Makefile  README.md
app/include/utils/: uuid.h
app/src/utils/: uuid.c
include/: uuid7.h
src/: uuid7.c
tests/: test_uuid7.c
utils/: build_libs.sh  build_tests.sh  gen_coverage.sh  run_tests.sh
